# LRcaller

./: .clang-format  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE.md  LRcaller.cc  Makefile  README.md  algo.hpp  lrcaller.cpp  misc.hpp  options.hpp
.github/workflows/: cancel.yaml  ci_linux.yaml  clang-format.yaml
test/: CMakeLists.txt  small_test.sh  test1.sh
test/small_data/: chr1reg.fa  chr1reg.fa.fai  input.vcf  output.vcf  reads.bam.bai
